--- a/TestMod/src/main/resources/assets/testmod/lang/en_us.json
+++ b/TestMod/src/main/resources/assets/testmod/lang/en_us.json
@@ -1,4 +1,12 @@
 {
   "item.testmod.alexandrite": "Alexandrite Gem",
-  "item.testmod.alexandrite": "Raw Alexandrite"
+  "item.testmod.raw_alexandrite": "Raw Alexandrite",
+
+  "block.testmod.alexandrite_block": "Block of Alexandrite",
+  "block.testmod.raw_alexandrite_block": "Block of Raw Alexandrite",
+  "block.testmod.alexandrite_ore": "Alexandrite Ore",
+  "block.testmod.alexandrite_deepslate_ore": "Alexandrite Deepslate Ore",
+
+  "creativetab.testmod.alexandrite_items": "Alexandrite Items",
+  "creativetab.testmod.alexandrite_blocks": "Alexandrite Blocks"
 }
